# ikigai_back_end

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: django.yml
ikigai/: db.sqlite3
ikigai/about/: urls.py  views.py
ikigai/chat/: apps.py  views.py
ikigai/chat/LLM/: Phi-3.py  chatGPT.py  grok.py  llama.py
ikigai/home/: urls.py  views.py
ikigai/ikigai/: asgi.py  settings.py  urls.py  wsgi.py
src/: main.rs
